<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demo.sample.fragments.FrgMain">


    <Button
        android:id="@+id/btnViewTransactions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_view_transactions"
        app:layout_constraintBottom_toTopOf="@+id/btnSendMoney"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/btnSendMoney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_send_money"
        app:layout_constraintBottom_toTopOf="@+id/btnBalance"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/btnViewTransactions" />

    <Button
        android:id="@+id/btnBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_view_balance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/btnSendMoney" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="80dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
